feat: use new features from java 17 and refactoring